# parking

./: README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
application/: app.py
migrations/: env.py
migrations/versions/: 3ad7a89b90c7_changed_clientparking_attributes.py  8fe7372bcddc_added_opening_hours.py  a9a46ad3d01c_changed_check_in_attr.py  ecee6749e5ea_create_tables.py
models/: model.py
tests/: conftest.py  factory_generation.py  test_w_factory.py  test_wo_factory.py
